# webshop-minimal

./: .gitignore  engine.py  env.py  goal.py  pyproject.toml  readme.md  requirements.txt  setup.sh  setup_search_engine.py  utils.py
webshop_minimal/: __init__.py  engine.py  env.py  goal.py
webshop_minimal/search_engine/indexes/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
webshop_minimal/search_engine/indexes_100/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
webshop_minimal/search_engine/indexes_100k/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
webshop_minimal/search_engine/indexes_1k/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
