[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
webshop_minimal = [
    "search_engine/**/*",
    "templates/*",
    "data/*",
]

[project]
name = "webshop_minimal"
version = "0.1.0"
description = "A Gym environment for WebShop simulation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4==4.13.3",
    "cleantext==1.1.4",
    "flask==3.1.0",
    "gym",
    "html2text",
    "numpy",
    "pandas",
    "torch",
    "rank_bm25==0.2.2",
    "pyserini==0.22.1",
    "faiss-cpu==1.10.0",
    "thefuzz",
    "gdown",
    "spacy==3.8.5",
    "rich",
]